spacing for section headers fixed

--- a/src/components/SectionHeader/sectionHeader.css
+++ b/src/components/SectionHeader/sectionHeader.css
@@ -1,12 +1,11 @@
 .section-header-nav {
   position: absolute;
+  display: flex;
+  align-items: flex-end;
   width: 450px;
   height: 100px;
   z-index: 5;
   background-color: var(--section-header-background);
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
   top: 0;
   left: 0;
 }
@@ -14,55 +13,34 @@
 .title-section,
 .title-section-menu {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
-  color: var(--section-header-text);
-  font-weight: 500;
-  width: 150px;
-  font-size: 19px;
-  margin-bottom: 1rem;
-  padding: 5px 15px;
-  position: absolute;
-}
-
-.title-section {
-  margin-left: 40px;
+  min-width: 60%;
+  color: var(--primary-header-text-dark);
+  padding: 5px 20px;
 }
 
 .title-section-menu {
-  display: flex;
+  min-width: 100%;
   justify-content: space-between;
-  align-items: center;
-  color: var(--section-header-text);
-  font-weight: 500;
-  height: fit-content;
-  min-width: 420px;
-  max-width: 420px;
-  font-size: 19px;
-  padding: 5px 15px;
-  position: absolute;
-}
-
-.section-header-title {
-  color: var(--section-header-text);
 }
 
 .section-header-arrow-left {
+  margin-left: 0;
+  margin-right: 20px;
   cursor: pointer;
-  margin-right: 1.5rem;
-  color: var(--section-header-text);
 }
 
 .section-header-title {
-  white-space: nowrap;
+  min-width: 200px;
 }
 
 .arrow-and-header {
+  justify-self: flex-start;
   display: flex;
-  justify-content: flex-start;
+  align-items: center;
 }
 
 .menu-icon {
-  color: var(--primary-header-text-dark);
-  cursor: pointer;
+  justify-self: flex-end;
 }
